--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/fontawesome.min.css" integrity="sha512-UuQ/zJlbMVAw/UU8vVBhnI4op+/tFOpQZVT+FormmIEhRSCnJWyHiBbEVgM4Uztsht41f3FzVWgLuwzUqOObKw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/solid.min.css" integrity="sha512-Hp+WwK4QdKZk9/W0ViDvLunYjFrGJmNDt6sCflZNkjgvNq9mY+0tMbd6tWMiAlcf1OQyqL4gn2rYp7UsfssZPA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
@@ -31,7 +31,7 @@
 			<li class="qrcontrols"><a onclick="showQR()">Show QR code</a></li>
 		</ul>
 		<div id="qrcode" onclick="hideQR()"></div>
-		<img src="img/germanisch.png" id="logo" alt="Germanisch logo">
+		<img src="/assets/GermanischLogo.png" id="logo" alt="Germanisch logo">
 
 		<select name="dictselector" id="dictselector">
 			<option value="en">Germanisch &ndash; English</option>
