add German, use new master file for data

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		<select name="dictselector" id="dictselector">
 			<option value="en">Germanisch &ndash; English</option>
 			<option value="fr">Germanisch &ndash; Français</option>
+			<option value="de">Germanisch &ndash; Deutsch</option>
 		</select>
 			
 		<input type="text" id="searchfield" autocomplete="off" value="">
