--- a/index.html
+++ b/index.html
@@ -15,6 +15,27 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js" integrity="sha512-CNgIRecGo7nphbeZ04Sc13ka07paqdeTu0WR1IM4kNcpmBAUSHSQX0FslNhTDadL4O5SAGapGt4FodqL8My0mA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="js/germanisch.js"></script>
 
+		<script>
+			// If `prefers-color-scheme` is not supported, fall back to light mode.
+			// In this case, light.css will be downloaded with `highest` priority.
+			if (window.matchMedia('(prefers-color-scheme: dark)').media === 'not all') {
+				document.documentElement.style.display = 'none';
+				document.head.insertAdjacentHTML(
+				'beforeend',
+				'<link rel="stylesheet" href="/light.css" onload="document.documentElement.style.display = \'\'">',
+				);
+			}
+		</script>
+		<!--
+			Conditionally either load the light or the dark stylesheet. The matching file
+			will be downloaded with `highest`, the non-matching file with `lowest`
+			priority. If the browser doesn't support `prefers-color-scheme`, the media
+			query is unknown and the files are downloaded with `lowest` priority (but
+			above I already force `highest` priority for my default light experience).
+		-->
+		<link rel="stylesheet" href="css/dark.css" media="(prefers-color-scheme: dark)" />
+		<link rel="stylesheet" href="css/light.css" media="(prefers-color-scheme: light)" />
+		<!-- The main stylesheet -->
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/fontawesome.min.css" integrity="sha512-UuQ/zJlbMVAw/UU8vVBhnI4op+/tFOpQZVT+FormmIEhRSCnJWyHiBbEVgM4Uztsht41f3FzVWgLuwzUqOObKw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/solid.min.css" integrity="sha512-Hp+WwK4QdKZk9/W0ViDvLunYjFrGJmNDt6sCflZNkjgvNq9mY+0tMbd6tWMiAlcf1OQyqL4gn2rYp7UsfssZPA==" crossorigin="anonymous" referrerpolicy="no-referrer">
