--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 	</head>
 	<body>
 		<ul id="top_links">
+			<li><a href="https://germanisch-lang.github.io">Home</a></li>
+			<li>&centerdot;</li>
 			<li><a href="http://sambahsa.pbworks.com/w/page/153333312/Germanisch">Official Website</a></li>
 			<li>&centerdot;</li>
 			<li><a href="https://github.com/germanisch-lang/dictionary">GitHub</a></li>
